# anemone-ambiata

./: .gitignore  README.md  ambiata-anemone.cabal  boris.toml  master.toml
bench/: bench.hs
bench/Bench/Foreign/: Atoi.hs  Memcmp.hs  Strtod.hs
cbench/: bench_memcmp.c  bench_strtod.c
cbits/: anemone_atoi.c  anemone_atoi.h  anemone_atoi_sse.c  anemone_atoi_sse.h  anemone_base.h  anemone_ffi.c  anemone_hash.c  anemone_hash.h  anemone_memcmp.c  anemone_memcmp.h  anemone_mempool.h  anemone_pack.c  anemone_pack.h  anemone_segv.c  anemone_segv.h  anemone_sse.h  anemone_strtod.c  anemone_strtod.h  anemone_twiddle.h  anemone_vint.c  anemone_vint.h  base.h  bench_atoi.c  bench_strtod.c  ffi.c  ffi.h  int.c  memcmp16.c  memcmp16.h  memcmp8.h  merge.c  offsetmerge.c  offsetmerge.h
csrc/: anemone_atoi.c  anemone_atoi.h  anemone_atoi_sse.c  anemone_atoi_sse.h  anemone_atoi_sse_impl.h  anemone_base.h  anemone_ffi.c  anemone_ffi.h  anemone_grisu2.c  anemone_grisu2.h  anemone_memcmp.c  anemone_memcmp.h  anemone_memcmp_zoo.h  anemone_mempool.c  anemone_mempool.h  anemone_segv.c  anemone_sse.h  anemone_strtod.c  anemone_time.c  anemone_time.h  anemone_twiddle.h
ctest/: test_mempool.c
doc/bench/: atoi.html  ffi.html  memcmp  memcmp.html  strtod.html
src/: Anemone.hs
src/Anemone/: Embed.hs  Headers.hs  Parser.hs  Pretty.hs
src/Anemone/Foreign/: Atoi.hs  Data.hs  FFI.hs  Grisu2.hs  Hash.hs  Memcmp.hs  Mempool.hs  Pack.hs  Segv.hs  Strtod.hs  Time.hs  VInt.hs
src/Anemone/Foreign/Memcmp/: Base.hs  Bench.hs  Export.hs
test/: test.hs
test/Test/Anemone/: Roundtrip.hs
test/Test/Anemone/Foreign/: Atoi.hs  Hash.hs  Memcmp.hs  Mempool.hs  Pack.hs  Strtod.hs  Time.hs  VInt.hs
