name:                  ambiata-anemone
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Sea creatures: a collection of C functions, packaged as a Haskell library, with QuickCheck for testing.
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           The C standard library (libc) is rubbish and slow.
                       We have been writing a few general purpose functions in C, for example int parsing, memory comparison, and some file-handling buffer stuff.
                       I would like a repository where I can put different versions of these functions, with benchmarks, and quickcheck tests without muddying up Icicle, but it would have to be open source.

extra-source-files:
    cbits/*.h
    cbits/*.c


library
  build-depends:
                       base                            >= 3          && < 5
                     , transformers                    >= 0.3        && < 0.5
                     , either                          >= 4.3        && < 4.5
                     , file-embed                      == 0.0.9
                     , filepath                        == 1.3.*
                     , ambiata-p
                     , bytestring                      == 0.10.*
                     , text                            == 1.2.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_anemone
                       Anemone
                       Anemone.Headers
                       Anemone.Foreign.FFI
                       Anemone.Foreign.Memcmp
                       Anemone.Foreign.Memcmp.Base
                       Anemone.Foreign.Memcmp.Export

  include-dirs:     cbits

  includes:         anemone_base.h
                    anemone_ffi.h
                    anemone_memcmp.h
                    anemone_sse.h
                    anemone_twiddle.h
  c-sources:        cbits/anemone_ffi.c
                    cbits/anemone_memcmp.c

  cc-options:       -std=c99 -O3 -msse4.2


test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-anemone
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*


executable bench

  main-is:             bench.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       bench

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-anemone
                     , ambiata-p
                     , criterion                       == 1.1.*
                     , bytestring                      == 0.10.*

  c-sources:        cbits/bench_memcmp.c
  cc-options:       -std=c99 -O3 -msse4.2

