name:                  ambiata-anemone
version:               0.0.1
license:               Apache-2.0
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              Sea creatures: a collection of C functions, packaged as a Haskell library, with QuickCheck for testing.
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           The C standard library (libc) is rubbish and slow.
                       We have been writing a few general purpose functions in C, for example int parsing, memory comparison, and some file-handling buffer stuff.
                       I would like a repository where I can put different versions of these functions, with benchmarks, and quickcheck tests without muddying up Icicle, but it would have to be open source.

extra-source-files:
    cbits/*.h
    cbits/*.c


library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , bytestring                      == 0.10.*
                     , file-embed                      == 0.0.9
                     , filepath                        >= 1.3        && < 1.5
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.6
                     , vector                          >= 0.10       && < 0.12

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Anemone
                       Anemone.Headers

                       Anemone.Foreign.Atoi
                       Anemone.Foreign.Data
                       Anemone.Foreign.FFI
                       Anemone.Foreign.Hash
                       Anemone.Foreign.Memcmp
                       Anemone.Foreign.Memcmp.Base
                       Anemone.Foreign.Memcmp.Export
                       Anemone.Foreign.Pack
                       Anemone.Foreign.Segv
                       Anemone.Foreign.Strtod

  include-dirs:
                       cbits

  install-includes:
                       anemone_atoi.h
                       anemone_atoi_sse.h
                       anemone_base.h
                       anemone_ffi.h
                       anemone_hash.h
                       anemone_memcmp.h
                       anemone_pack.h
                       anemone_sse.h
                       anemone_strtod.h
                       anemone_twiddle.h

  includes:
                       anemone_atoi.h
                       anemone_atoi_sse.h
                       anemone_base.h
                       anemone_ffi.h
                       anemone_hash.h
                       anemone_memcmp.h
                       anemone_pack.h
                       anemone_sse.h
                       anemone_strtod.h
                       anemone_twiddle.h

  c-sources:
                       cbits/anemone_atoi.c
                       cbits/anemone_atoi_sse.c
                       cbits/anemone_ffi.c
                       cbits/anemone_hash.c
                       cbits/anemone_memcmp.c
                       cbits/anemone_pack.c
                       cbits/anemone_segv.c
                       cbits/anemone_strtod.c

  cc-options:
                       -std=c99 -O3 -msse4.2 -march=native -Wall -Werror


test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-anemone
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , bytestring                      == 0.10.*
                     , text                            == 1.2.*
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , vector                          >= 0.10       && < 0.12


benchmark bench
  type:                exitcode-stdio-1.0

  main-is:             bench.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       bench

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-anemone
                     , ambiata-p
                     , bytestring                      == 0.10.*
                     , criterion                       == 1.1.*
                     , hashable                        == 1.2.*
                     , text                            == 1.2.*

  c-sources:
                       cbits/bench_memcmp.c
                       cbits/bench_atoi.c
                       cbits/bench_strtod.c

  cc-options:
                       -std=c99 -O3 -msse4.2 -march=native
